k8s-envs/appwork-web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appwork-web
  namespace: appwork
spec:
  replicas: 2
  selector:
    matchLabels:
      app: appwork-web
  template:
    metadata:
      labels:
        app: appwork-web
    spec:
      containers:
      - name: appwork-web
        image: unitynts/appwork_web:1.0
        ports:
        - containerPort: 3000
      restartPolicy: Always
