k8s-envs/appwork-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appwork-web
  namespace: appwork
spec:
  type: ClusterIP      
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: appwork-web
